Details
-
Type:
Bug
-
Status: Closed
-
Priority:
Not Evaluated
-
Resolution: Done
-
Affects Version/s: 5.0.0
-
Fix Version/s: 5.0.0
-
Component/s: Widgets: Widgets and Dialogs
-
Labels:
-
Environment:Windows 7, Classic Theme, MSVC2010
-
Commits:db1aa6dd99aa7ce3118452c811dcf88a863511d7
Description
Windows 7: QWizard autotest backbutton cases fail if Windows Classic theme is enabled because QWizard forces Aero style on wizard regardless of the selected theme.
Attachments
Issue Links
- is required for
-
QTBUG-24203 Qt 5.0 - Windows: Fix tests
-
- Closed
-