Fix QWizard autotest for Windows 7 Classic theme

QWizard always forced Aero style even if Classic theme was used.
Added a check for Classic theme into initialization.

Task-number: QTBUG-24618
Change-Id: I0793df62e022037835e1c1a311143f06cc4382b4
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@nokia.com>

cregit: db1aa6dd99aa7ce3118452c811dcf88a863511d7 https://github.com/qt/qtbase/commit/db1aa6dd99aa7ce3118452c811dcf88a863511d7